Adding num as an extrernal package

--- a/src/versions/standard/Makefile.local
+++ b/src/versions/standard/Makefile.local
@@ -20,6 +20,8 @@ clean::
 	cd ../unit-tests; make clean
 
 
+CAMLPKGS = -package num
+
 CAMLLEX = $(CAMLBIN)ocamllex
 CAMLYACC = $(CAMLBIN)ocamlyacc
 
