--- a/src/Makefile.local
+++ b/src/Makefile.local
@@ -25,6 +25,7 @@ cleanall::
 
 
 CAMLLEX = $(CAMLBIN)ocamllex
+CAMLYACC = $(CAMLBIN)ocamlyacc
 MENHIR = $(CAMLBIN)menhir
 CAMLPKGS += -package num
 
@@ -34,8 +35,11 @@ merlin-hook::
 %.ml :  %.mll
 	$(CAMLLEX) $<
 
-%.ml %.mli :  %.mly
+verit/veritParser.ml verit/veritParser.mli : verit/veritParser.mly
 	$(MENHIR) $<
+
+%.ml %.mli :  %.mly
+	$(CAMLYACC) $<
 
 .PHONY: smtcoq_plugin.mlpack.d
 smtcoq_plugin.mlpack.d :  verit/veritParser.ml verit/veritLexer.ml ../3rdparty/alt-ergo/smtlib2_parse.ml ../3rdparty/alt-ergo/smtlib2_lex.ml smtlib2/sExprParser.ml smtlib2/sExprLexer.ml
