--- a/examples/aletheTests/Makefile
+++ b/examples/aletheTests/Makefile
@@ -3,4 +3,5 @@ clean_txt_files:
 	find . -type f -name '*.vo' -exec rm {} +
 	find . -type f -name '*.vok' -exec rm {} +
 	find . -type f -name '*.vos' -exec rm {} +
+	find . -type f -name '*.aux' -exec rm {} +
 clean: clean_txt_files
